// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommunityPostHeaderComponent should show community post header 1`] = `
<pf-community-post-header
  hideEdit="false"
  isExpiredPoll="false"
  isFavoritedByCurrentUser="false"
  isInternalOnly="false"
  isReply="false"
  isUserPoll="false"
  store={[Function Store]}
  time={[Function String]}
  user={[Function Object]}
>
  <p
    class="m-0"
  >
    <span
      class="community-user-name-text"
    >
      Testfirstname Testlastname
    </span>
    <span
      class="community-sub-text"
    >
       @ Company Name | 3 days ago
    </span>
  </p><div>
    
    <span>
      <span
        class="community-badge-text"
      >
        Comp Collective Member
      </span>
      
    </span>
  </div>
</pf-community-post-header>
`;

exports[`CommunityPostHeaderComponent should show internal community post header 1`] = `
<pf-community-post-header
  hideEdit="false"
  isExpiredPoll="false"
  isFavoritedByCurrentUser="false"
  isInternalOnly={[Function Boolean]}
  isReply="false"
  isUserPoll="false"
  store={[Function Store]}
  time={[Function String]}
  user={[Function Object]}
>
  <div
    class="internal float-right pl-2 pr-2 community-border-radius"
    data-qa-id="lbl-communityInternal"
  >
    Internal
  
  </div><p
    class="m-0"
  >
    <span
      class="community-user-name-text"
    >
      Testfirstname Testlastname
    </span>
    <span
      class="community-sub-text"
    >
       @ Company Name | 3 days ago
    </span>
  </p><div>
    
    <span>
      <span
        class="community-badge-text"
      >
        Comp Collective Member
      </span>
      
    </span>
  </div>
</pf-community-post-header>
`;
